# moesniper

./: .ad-unwired.md  .cam-unwired.md  .cbp-unwired.md  .clippy-fixes.md  .gitignore  .moeinclude  AGENTS.md  CHANGELOG.md  Cargo.toml  MERGED_PR_5_8.md  PUBLISHING.md  README.md  SECURITY_FIXES_SUMMARY.md  clippy.toml  extract.md  rustfmt.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 03_CODEBASE_IMPROVEMENT.md  04_SUPPORT_QUESTION.md  config.yml
.github/workflows/: build.yml  ci.yml  lint.yml  publish-cratesio.yml  publish.yml  release.yml  stale.yml  wheels.yml
benches/: sniper_bench.rs
docs/: AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  TEST_IMPROVEMENTS.md
proptest-regressions/: main.txt
sniper-py/: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
sniper-py/python/moesniper/: __init__.py  _native.pyi
sniper-py/python/sniper/: __init__.py  _native.pyi
sniper-py/src/: lib.rs
sniper-py/tests/: test_basic.py
src/: config.rs  diff.rs  help_text.rs  indent.rs  lib.rs  main.rs  security.rs
tests/: README.md  boundary_tests.rs  cbp_boundary_tests.rs  enterprise_security.rs  integration.rs  property_invariants.proptest-regressions  property_invariants.rs  regression_golden.rs  smoke.rs  unit_edge_cases.rs
tests/regression/golden/: splice_basic.txt
