[package]
name = "moesniper"
version = "0.5.0-alpha"
edition = "2021"
description = "Escape-proof precision file editor for LLM agents. Hex-encoded content, line-range splicing, atomic writes."
license = "MIT"
keywords = ["editor", "llm", "agent", "hex", "code"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/moeshawky/moesniper"

[[bin]]
name = "sniper"
path = "src/main.rs"

[lib]
name = "moesniper"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llmosafe = "0.5.0"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
proptest = "1"
