[workspace]
members = ["sniper-py"]
resolver = "2"

[package]
name = "moesniper"
version = "0.7.10"
edition = "2021"
description = "Escape-proof precision file editor for LLM agents. Hex-encoded content, line-range splicing, atomic writes."
license = "MIT"
keywords = ["editor", "llm", "agent", "hex", "code"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/moeshawky/moesniper"
readme = "README.md"
rust-version = "1.87"
exclude = [".moegraph/", "deny.toml"]

[[bin]]
name = "sniper"
path = "src/main.rs"

[lib]
name = "moesniper"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llmosafe = "0.7.5"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = "0.8.2"
llmosafe = { version = "0.7.5", features = ["testing"] }

[[bench]]
name = "sniper_bench"
harness = false

# ── Lint Policy ──────────────────────────────────────────────────────────────
# CI: cargo clippy --all-targets -- -D warnings (all warnings are errors).
# These declarations add targeted enforcement beyond the default warning set.
#
# unwrap/expect enforcement is in src/lib.rs crate-level attributes
# (denied for library code, allowed in #[cfg(test)]).
[lints.clippy]
# Deny: correctness + hygiene — these must never reach production
unreachable = "deny"
todo = "deny"
panic = "deny"

# Warn: quality + security — catch drift before it becomes debt
dbg_macro = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"
redundant_else = "warn"

# Allow: pedantic lints that produce false positives for this project
type_complexity = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
