[package]
name = "sniper-py"
version = "0.7.6"
edition = "2021"
description = "Python bindings for moesniper — escape-proof precision file editing."
license = "MIT"
rust-version = "1.87"
exclude = [".moegraph/", "deny.toml"]

[lib]
name = "sniper_py"
crate-type = ["cdylib"]

[dependencies]
moesniper = { path = ".." }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llmosafe = "0.7.4"
