[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "moesniper"
version = "0.7.9"
description = "Escape-proof precision file editing — Python bindings for moesniper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors",
]
keywords = ["editor", "llm", "agent", "hex", "precision"]

[project.urls]
Homepage = "https://github.com/moeshawky/moesniper"
Changelog = "https://github.com/moeshawky/moesniper/blob/main/CHANGELOG.md"
Issues = "https://github.com/moeshawky/moesniper/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "moesniper._native"

# ── Ruff (linter) ──────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle errors + warnings
    "F",           # pyflakes (undefined names, unused imports)
    "I",           # isort (import ordering)
    "UP",          # pyupgrade (modernize syntax)
    "B",           # flake8-bugbear (common bug patterns)
    "SIM",         # flake8-simplify
    "RUF",         # Ruff-specific rules
    "S",           # flake8-bandit (security)
    "C4",          # flake8-comprehensions
    "RET",         # flake8-return
    "PTH",         # flake8-use-pathlib
    "FA",          # flake8-future-annotations
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S108"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy (type checker) ─────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "moesniper._native"
ignore_missing_imports = true


# ── pytest ───────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --tb=short"

# ── coverage ─────────────────────────────────────────────────
[tool.coverage.run]
source = ["python/moesniper"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
